fixed button on mobile

--- a/src/components/list/List.scss
+++ b/src/components/list/List.scss
@@ -246,18 +246,6 @@
                     transform-origin: 50% 50%;
                     transition: all .3s;
                 }
-    
-                &:hover{
-                    background-color: rgba(255,255,255,.3);
-    
-                    &:before{
-                        transform: rotate(180deg);
-                    }
-    
-                    &:after{
-                        transform: rotate(180deg);
-                    }
-                }
             }
         }
     }
